# epub2audiobook

./: .gitignore  AUR.md  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  deny.toml  encode_wav_to_mp3.sh  justfile
.github/workflows/: ci.yml  pr-notify-slack.yml  release.yml  test.yml
aur/ebook2audiobook/: .SRCINFO
src/: custom_replacements.rs  main.rs  replace_text.rs
