[package]
name = "ebook2audiobook"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/haydonryan/epub2audiobook"
authors = ["Haydon Ryan <haydon.ryan@gmail.com>"]

[dependencies]
epub = "2.1.5"
regex = "1.12.3"
scraper = "0.25.0"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1

[package.metadata.deb]
depends = "$auto"
maintainer = "Haydon Ryan <haydon.ryan@gmail.com>"
section = "utility"
priority = "optional"
assets = [
  ["target/release/ebook2audiobook", "usr/bin/", "755"],
]
