[package]
name = "ebook2audiobook"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/haydonryan/epub2audiobook"
authors = ["Haydon Ryan <haydon.ryan@gmail.com>"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
epub = "2.1.5"
regex = "1.12.3"
scraper = "0.26.0"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1

[package.metadata.deb]
depends = "$auto"
maintainer = "Haydon Ryan <haydon.ryan@gmail.com>"
section = "utility"
priority = "optional"
assets = [
  ["target/release/ebook2audiobook", "usr/bin/", "755"],
]

[package.metadata.release]
allow-branch = ["main", "master"]
sign-commit = false
sign-tag = false
push = true
tag = true
publish = false
tag-name = "v{{version}}"
tag-message = "release: v{{version}}"
pre-release-commit-message = "release: v{{version}}"
